[package]
  name = "chirpstack-udp-forwarder"
  description = "ChirpStack UDP Forwarder for Concentratord, compatible with the Semtech UDP protocol"
  repository = "https://github.com/chirpstack/chirpstack-udp-forwarder/"
  license = "MIT"
  version = "4.1.8"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  chirpstack_api = { version = "4.12", default-features = false }
  serde_json = "1.0"
  zmq = "0.10"
  clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  hex = "0.4"
  toml = "0.8"
  serde = { version = "1.0", features = ["derive"] }
  log = "0.4"
  simple_logger = "5.0"
  uuid = { version = "1.16", features = ["v4"] }
  syslog = "7.0"
  rand = "0.9"
  chrono = "0.4"
  base64 = "0.22"
  prost = "0.13"
  prost-types = "0.13"
  prometheus-client = "0.23"
  anyhow = "1.0"

  [package.metadata.deb]
    assets = [
      [
        "target/release/chirpstack-udp-forwarder",
        "usr/bin/",
        "755",
      ],
      [
        "packaging/debian/chirpstack-udp-forwarder.toml",
        "etc/chirpstack-udp-forwarder/",
        "640",
      ],
    ]
    conf-files = ["/etc/chirpstack-udp-forwarder/chirpstack-udp-forwarder.toml"]
    maintainer-scripts = "packaging/debian/"
    systemd-units = { enable = true }

[profile.release]
  strip = true
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"
